--- a/css/main.css
+++ b/css/main.css
@@ -203,6 +203,179 @@
   margin: 0;
 }
 
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .footer {
+    background-color: #2f303a;
+    color: #ffffff;
+    min-height: 252px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .footer__container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 480px;
+  }
+  .footer__address {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+  .footer__logo {
+    font-family: var(--logo-font);
+    font-style: normal;
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 31px;
+    letter-spacing: 0.03em;
+    text-decoration: none;
+  }
+  .footer__socialmedia {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .footer__icon-box {
+    max-width: 450px;
+    max-height: 100px;
+    display: flex;
+    padding-right: 0px;
+    padding: 0;
+  }
+  .socials__icons--footer {
+    fill: #ffffff;
+    background-color: rgba(255, 255, 255, 0.1);
+    border-radius: 50%;
+    cursor: pointer;
+  }
+  .socials__icons--footer:hover {
+    background-color: #2196f3;
+    transition: 250ms;
+  }
+  .socialmedia__paragraf {
+    font-family: var(--main-font);
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 24px;
+    letter-spacing: 0.03em;
+    margin: 0px;
+    padding-bottom: 20px;
+    color: #ffffff;
+  }
+  .footer__form-newsletter {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    padding-top: 60px;
+    padding-left: 67px;
+  }
+  .form-newsletter__paragraf {
+    text-transform: uppercase;
+    font-family: var(--main-font);
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 24px;
+    /* or 171% */
+    letter-spacing: 0.03em;
+    margin: 0px;
+    padding-bottom: 20px;
+    /* background-color: #2196f3; */
+    color: #ffffff;
+    text-align: start;
+  }
+  .form-newsletter__box {
+    display: flex;
+    justify-content: space-between;
+  }
+  .form-newsletter__button-icon {
+    fill: #ffffff;
+    width: 24px;
+    height: 24px;
+    margin-left: 24px;
+  }
+  .form-newsletter__link {
+    font-family: var(--main-font);
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 30px;
+    letter-spacing: 0.06em;
+  }
+  .form-newsletter__input {
+    background-color: transparent;
+    height: 50px;
+    min-width: 358px;
+    border-radius: 6px;
+    margin: 0;
+    border-color: #757575;
+    padding-left: 16px;
+    border-style: solid;
+    color: #ffffff;
+  }
+  .form-newsletter__input:focus-within {
+    border-color: #ffffff;
+    transition-duration: 250ms;
+    transition: cubic-bezier(0.4, 0, 0.2, 1);
+    outline: none;
+  }
+  .button--newsletter {
+    margin-left: 12px;
+    letter-spacing: 0.03em;
+    cursor: pointer;
+    color: #ffffff;
+    border-radius: 4px;
+    background-color: #2196f3;
+    border: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    height: 50px;
+    width: 200px;
+  }
+  .button--newsletter:focus, .button--newsletter:hover {
+    color: #ffffff;
+    background-color: var(--button-color);
+    box-shadow: var(--box);
+    border-radius: var(--border-radius);
+    box-shadow: 0px 1px 3px rgba(255, 255, 255, 0.12), 0px 1px 1px rgba(255, 255, 255, 0.14), 0px 2px 1px rgba(255, 255, 255, 0.2);
+    transition: cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .link__page {
+    color: #212121;
+    text-decoration: none;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 171%;
+    letter-spacing: 0.02em;
+    padding-right: 0px;
+    margin-left: 20px;
+    margin-right: 20px;
+    position: relative;
+  }
+  .link__page:hover {
+    color: #2196f3;
+    cursor: pointer;
+    background-color: transparent;
+  }
+  .link--contact {
+    line-height: 16px;
+    margin-right: 15px;
+  }
+  .link__page--footer {
+    color: #757575;
+    margin: 0;
+  }
+}
 .header {
   display: flex;
   flex-wrap: wrap;
@@ -296,6 +469,112 @@
   left: 0;
 }
 
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .header__menu {
+    width: 480px;
+    height: 60px;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 200%;
+    letter-spacing: 0.06em;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0px;
+    margin: 0px;
+    background-color: aquamarine;
+  }
+  .header__logo {
+    width: 134px;
+    height: 28px;
+    font-family: var(--logo-font);
+    font-style: normal;
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 31px;
+    letter-spacing: 0.03em;
+    text-decoration: none;
+  }
+  .link {
+    color: #212121;
+    text-decoration: none;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 171%;
+    letter-spacing: 0.02em;
+    padding-right: 0px;
+    margin-left: 20px;
+    margin-right: 20px;
+    position: relative;
+    display: none;
+  }
+  .link:hover {
+    color: var(--hovercolor);
+    cursor: pointer;
+    background-color: transparent;
+  }
+  .link:focus {
+    color: var(--hovercolor);
+    cursor: pointer;
+    background-color: transparent;
+  }
+  .link__page {
+    color: #212121;
+    text-decoration: none;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 171%;
+    letter-spacing: 0.02em;
+    padding-right: 0px;
+    margin-left: 20px;
+    margin-right: 20px;
+    position: relative;
+    display: none;
+  }
+  .link__page:hover {
+    color: #2196f3;
+    cursor: pointer;
+    background-color: transparent;
+  }
+  .link--contact {
+    line-height: 16px;
+    margin-right: 15px;
+    display: none;
+  }
+  .header__contact {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    display: none;
+  }
+  .contact__icon {
+    fill: #757575;
+    display: none;
+  }
+  .contact__icon:hover,
+.contact__icon .contact__link:hover {
+    fill: #2196f3;
+    cursor: pointer;
+  }
+  .link-nav__underline {
+    display: inline-block;
+    color: #2196f3;
+    position: relative;
+    display: none;
+  }
+  .link-nav__underline::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 5px;
+    background-color: #2196f3;
+    bottom: -37px;
+    left: 0;
+  }
+}
 .order {
   background-color: #2f303a;
   color: #ffffff;
@@ -349,6 +628,57 @@
   transition: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .order {
+    background-color: #2f303a;
+    color: #ffffff;
+    min-height: 252px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-top: 1px solid #ececec;
+  }
+  .order .order__container {
+    width: 480px;
+    height: 400px;
+    color: #ffffff;
+    background-image: linear-gradient(to top, rgba(0, 18, 105, 0) 0%, rgba(47, 48, 58, 0.4) 100%), url("../images/team_meeting.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+  .order__header {
+    display: flex;
+    justify-content: center;
+    width: 365px;
+    height: 84px;
+    text-align: center;
+  }
+  .button {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 162%;
+    /* identical to box height, or 162% */
+    text-align: center;
+    letter-spacing: 0.03em;
+    cursor: pointer;
+    color: #ffffff;
+    border-radius: 4px;
+    border: none;
+    background-color: var(--button-color);
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+  }
+  .button:focus, .button:hover {
+    -webkit-box-shadow: 0px 10px 13px -7px #000000, 0px 0px 19px 0px #000000;
+    box-shadow: 0px 10px 13px -7px #000000, 0px 0px 19px 0px #000000;
+    border-radius: 4px 4px 4px 4px;
+    transition: cubic-bezier(0.4, 0, 0.2, 1);
+  }
+}
 .clients {
   color: #ffffff;
   display: flex;
@@ -397,6 +727,124 @@
   padding-bottom: 50px;
 }
 
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .clients {
+    color: #ffffff;
+    display: flex;
+    justify-content: center;
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+  .clients__container {
+    color: #ffffff;
+    width: 480px;
+  }
+  .clients__wrapper {
+    width: 480px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .clients__box {
+    max-width: 150px;
+    max-height: 92px;
+    display: flex;
+    padding-right: 0px;
+    padding: 0;
+    margin: 0%;
+    border-radius: 10%;
+    margin: 15px;
+  }
+  .clients__icon {
+    fill: #afb1b8;
+    width: 210px;
+    height: 92px;
+    background-color: #ffffff;
+    border-radius: 5%;
+    border: 2px solid #afb1b8;
+  }
+  .clients__icon:hover {
+    fill: #2196f3;
+    border-color: #2196f3;
+    cursor: pointer;
+    transition: cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .section__paragraf {
+    width: 450px;
+    font-family: var(--main-font);
+    font-style: normal;
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 60px;
+    text-transform: uppercase;
+    letter-spacing: 0.03em;
+    color: #212121;
+    text-decoration: solid;
+    text-align: center;
+    display: inline-block;
+    margin: 0;
+    padding-bottom: 50px;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .clients {
+    color: #ffffff;
+    display: flex;
+    justify-content: center;
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+  .clients__container {
+    color: #ffffff;
+    width: 480px;
+  }
+  .clients__wrapper {
+    width: 480px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .clients__box {
+    max-width: 150px;
+    max-height: 92px;
+    display: flex;
+    padding-right: 0px;
+    padding: 0;
+    margin: 0%;
+    border-radius: 10%;
+    margin: 15px;
+  }
+  .clients__icon {
+    fill: #afb1b8;
+    width: 210px;
+    height: 92px;
+    background-color: #ffffff;
+    border-radius: 5%;
+    border: 2px solid #afb1b8;
+  }
+  .clients__icon:hover {
+    fill: #2196f3;
+    border-color: #2196f3;
+    cursor: pointer;
+    transition: cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .section__paragraf {
+    width: 450px;
+    font-family: var(--main-font);
+    font-style: normal;
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 60px;
+    text-transform: uppercase;
+    letter-spacing: 0.03em;
+    color: #212121;
+    text-decoration: solid;
+    text-align: center;
+    display: inline-block;
+    margin: 0;
+    padding-bottom: 50px;
+  }
+}
 .article {
   color: #ffffff;
   padding-top: 94px;
@@ -459,6 +907,170 @@
   margin: 0;
 }
 
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .article__container {
+    max-width: 480px;
+    margin: 0 auto;
+    padding: 30px 15px;
+    margin-top: 40px;
+    background-color: aqua;
+  }
+  .article__description {
+    /* margin: 10 15px 15px; */
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 24px;
+    /* or 171% */
+    letter-spacing: 0.03em;
+    margin: 0px;
+    padding: 0px;
+    color: #757575;
+    text-align: justify;
+  }
+  .article__article-box {
+    max-width: 450px;
+    display: inline-block;
+  }
+  .article__icon-box {
+    width: 450px;
+    height: 120px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-right: 0px;
+    margin: 0px;
+    padding: 0;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    margin-bottom: 30px;
+    background-color: #f5f4fa;
+  }
+  .article-box__paragraf {
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #212121;
+    padding: 0;
+    margin: 0;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .article__container {
+    max-width: 768px;
+    margin: 0 auto;
+    padding: 30px 15px;
+    margin-top: 40px;
+    background-color: rgb(119, 0, 255);
+  }
+  .article__description {
+    /* margin: 10 15px 15px; */
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 24px;
+    /* or 171% */
+    letter-spacing: 0.03em;
+    margin: 0px;
+    padding: 0px;
+    color: #757575;
+    text-align: justify;
+  }
+  .article__article-box {
+    max-width: 354px;
+    display: inline-block;
+  }
+  .article__icon-box {
+    width: 354px;
+    height: 120px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-right: 0px;
+    margin: 0px;
+    padding: 0;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    margin-bottom: 30px;
+    background-color: #f5f4fa;
+  }
+  .article-box__paragraf {
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #212121;
+    padding: 0;
+    margin: 0;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .article {
+    color: #ffffff;
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+  .article__container {
+    max-width: 1200px;
+    margin: 0 auto;
+  }
+  .article__description {
+    /* margin: 10 15px 15px; */
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 24px;
+    /* or 171% */
+    letter-spacing: 0.03em;
+    margin: 0px;
+    padding: 0px;
+    color: #757575;
+    text-align: justify;
+  }
+  .article__article-box {
+    max-width: 270px;
+    display: inline-block;
+    padding-right: 0px;
+    margin: 0px;
+    padding: 0;
+  }
+  .article__icon-box {
+    width: 270px;
+    height: 120px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-right: 0px;
+    margin: 0px;
+    padding: 0;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    margin-bottom: 30px;
+    background-color: #f5f4fa;
+  }
+  .article-box__paragraf {
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #212121;
+    padding: 0;
+    margin: 0;
+  }
+}
 .slider__container {
   color: #ffffff;
   display: flex;
@@ -660,6 +1272,88 @@
   background-color: #ffffff;
 }
 
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .team {
+    color: #ffffff;
+    display: flex;
+    justify-content: center;
+    background-color: #f5f4fa;
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+  .team__container {
+    width: 450px;
+  }
+  .team__box {
+    width: 450px;
+    margin-bottom: 35px;
+    display: flex;
+    justify-content: center;
+  }
+  .team__figure {
+    width: 450px;
+    margin: 0 auto;
+    padding-bottom: 15px;
+    background-color: #ffffff;
+    box-shadow: var(--box-shadow);
+    border-radius: var(--border-radius);
+  }
+  .team__description {
+    font-family: var(--main-font);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: #757575;
+    background-color: #cc4141;
+    line-height: 30px;
+  }
+  .section__paragraf {
+    width: 480px;
+    font-family: var(--main-font);
+    font-style: normal;
+    font-weight: 900;
+    font-size: 44px;
+    text-transform: uppercase;
+    letter-spacing: 0.03em;
+    color: #212121;
+    text-decoration: solid;
+    text-align: center;
+    display: inline-block;
+    margin: 0;
+    background-color: #2196f3;
+  }
+  .socials__icon {
+    margin-left: 5px;
+    margin-right: 5px;
+    fill: #757575;
+    background-color: #ffffff;
+    border-radius: 50%;
+  }
+  .socials__icon--team {
+    margin-left: 5px;
+    margin-right: 5px;
+    fill: #757575;
+    background-color: #ffffff;
+    border-radius: 50%;
+  }
+  .socials__icon--team:hover {
+    fill: #ffffff;
+    background-color: #2196f3;
+    cursor: pointer;
+    transition: 250ms;
+  }
+  .team__icons-box {
+    width: 450px;
+    height: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-right: 0px;
+    margin: 0px;
+    padding: 0;
+    background-color: #ffffff;
+  }
+}
 .whatwedo {
   color: #ffffff;
   display: flex;
@@ -717,6 +1411,16 @@
   background-color: #ffffff;
 }
 
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .whatwedo {
+    color: #ffffff;
+    display: flex;
+    justify-content: center;
+    padding-top: 94px;
+    padding-bottom: 94px;
+    display: none;
+  }
+}
 .modal__backdrop {
   position: fixed;
   left: 0;
