--- a/sass/components/_pagefooter.scss
+++ b/sass/components/_pagefooter.scss
@@ -190,3 +190,203 @@
   color: #757575;
   margin: 0;
 }
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .footer {
+    background-color: #2f303a;
+    color: #ffffff;
+    min-height: 252px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .footer__container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 480px;
+  }
+
+  .footer__address {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+
+  .footer__logo {
+    font-family: var(--logo-font);
+    font-style: normal;
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 31px;
+    letter-spacing: 0.03em;
+    text-decoration: none;
+  }
+
+  .footer__socialmedia {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .footer__icon-box {
+    max-width: 450px;
+    max-height: 100px;
+    display: flex;
+    padding-right: 0px;
+    padding: 0;
+  }
+
+  .socials__icons--footer {
+    fill: #ffffff;
+    background-color: rgba(255, 255, 255, 0.1);
+    border-radius: 50%;
+    cursor: pointer;
+
+    &:hover {
+      background-color: #2196f3;
+      transition: 250ms;
+    }
+  }
+
+  .socialmedia__paragraf {
+    font-family: var(--main-font);
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 24px;
+    letter-spacing: 0.03em;
+    margin: 0px;
+    padding-bottom: 20px;
+    color: #ffffff;
+  }
+
+  .footer__form-newsletter {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    padding-top: 60px;
+    padding-left: 67px;
+  }
+  .form-newsletter__paragraf {
+    text-transform: uppercase;
+    font-family: var(--main-font);
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 24px;
+    /* or 171% */
+    letter-spacing: 0.03em;
+    margin: 0px;
+    padding-bottom: 20px;
+    /* background-color: #2196f3; */
+    color: #ffffff;
+    text-align: start;
+  }
+  .form-newsletter__box {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .form-newsletter__button-icon {
+    fill: #ffffff;
+    width: 24px;
+    height: 24px;
+    margin-left: 24px;
+  }
+  .form-newsletter__link {
+    font-family: var(--main-font);
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 30px;
+    letter-spacing: 0.06em;
+  }
+  .form-newsletter__input {
+    background-color: transparent;
+    height: 50px;
+    min-width: 358px;
+    border-radius: 6px;
+    margin: 0;
+    border-color: #757575;
+    padding-left: 16px;
+    border-style: solid;
+    color: #ffffff;
+
+    &:focus-within {
+      border-color: #ffffff;
+      transition-duration: 250ms;
+      transition: cubic-bezier(0.4, 0, 0.2, 1);
+      outline: none;
+    }
+  }
+
+  .button--newsletter {
+    margin-left: 12px;
+    letter-spacing: 0.03em;
+    cursor: pointer;
+    color: #ffffff;
+    border-radius: 4px;
+    background-color: #2196f3;
+    border: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+
+    height: 50px;
+    width: 200px;
+
+    &:focus,
+    &:hover {
+      color: #ffffff;
+      background-color: var(--button-color);
+      box-shadow: var(--box);
+      border-radius: var(--border-radius);
+      box-shadow: 0px 1px 3px rgba(255, 255, 255, 0.12),
+        0px 1px 1px rgba(255, 255, 255, 0.14),
+        0px 2px 1px rgba(255, 255, 255, 0.2);
+      transition: cubic-bezier(0.4, 0, 0.2, 1);
+    }
+  }
+
+  .link__page {
+    color: #212121;
+    text-decoration: none;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 171%;
+    letter-spacing: 0.02em;
+    padding-right: 0px;
+    margin-left: 20px;
+    margin-right: 20px;
+    position: relative;
+
+    &:hover {
+      color: #2196f3;
+      cursor: pointer;
+      background-color: transparent;
+    }
+  }
+
+  .link--contact {
+    line-height: 16px;
+    margin-right: 15px;
+  }
+
+  .link__page--footer {
+    color: #757575;
+    margin: 0;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+}
+
+@media screen and (min-width: 1200px) {
+}
