--- a/sass/components/_pageheader.scss
+++ b/sass/components/_pageheader.scss
@@ -92,3 +92,120 @@
     left: 0;
   }
 }
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .header__menu {
+    width: 480px;
+    height: 60px;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 200%;
+    letter-spacing: 0.06em;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0px;
+    margin: 0px;
+    background-color: aquamarine;
+  }
+  .header__logo {
+    width: 134px;
+    height: 28px;
+    font-family: var(--logo-font);
+    font-style: normal;
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 31px;
+    letter-spacing: 0.03em;
+    text-decoration: none;
+  }
+
+  .link {
+    color: #212121;
+    text-decoration: none;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 171%;
+    letter-spacing: 0.02em;
+    padding-right: 0px;
+    margin-left: 20px;
+    margin-right: 20px;
+    position: relative;
+    display: none;
+    &:hover {
+      color: var(--hovercolor);
+      cursor: pointer;
+      background-color: transparent;
+    }
+
+    &:focus {
+      color: var(--hovercolor);
+      cursor: pointer;
+      background-color: transparent;
+    }
+  }
+  .link__page {
+    color: #212121;
+    text-decoration: none;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 171%;
+    letter-spacing: 0.02em;
+    padding-right: 0px;
+    margin-left: 20px;
+    margin-right: 20px;
+    position: relative;
+    display: none;
+    &:hover {
+      color: #2196f3;
+      cursor: pointer;
+      background-color: transparent;
+    }
+  }
+  .link--contact {
+    line-height: 16px;
+    margin-right: 15px;
+    display: none;
+  }
+
+  .header__contact {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    display: none;
+  }
+
+  .contact__icon {
+    fill: #757575;
+    display: none;
+    &:hover,
+    .contact__link:hover {
+      fill: #2196f3;
+      cursor: pointer;
+    }
+  }
+  .link-nav__underline {
+    display: inline-block;
+    color: #2196f3;
+    position: relative;
+    display: none;
+    &::after {
+      content: "";
+      position: absolute;
+      width: 100%;
+      height: 5px;
+      background-color: #2196f3;
+      bottom: -37px;
+      left: 0;
+    }
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+}
+
+@media screen and (min-width: 1200px) {
+}
