--- a/sass/components/_pagesectionarticle.scss
+++ b/sass/components/_pagesectionarticle.scss
@@ -61,3 +61,187 @@
   padding: 0;
   margin: 0;
 }
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .article__container {
+    max-width: 480px;
+    margin: 0 auto;
+    padding: 30px 15px;
+    margin-top: 40px;
+    background-color: aqua;
+  }
+
+  .article__description {
+    /* margin: 10 15px 15px; */
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 24px;
+    /* or 171% */
+    letter-spacing: 0.03em;
+    margin: 0px;
+    padding: 0px;
+
+    color: #757575;
+    text-align: justify;
+  }
+
+  .article__article-box {
+    max-width: 450px;
+    display: inline-block;
+  }
+
+  .article__icon-box {
+    width: 450px;
+    height: 120px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-right: 0px;
+    margin: 0px;
+    padding: 0;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    margin-bottom: 30px;
+    background-color: #f5f4fa;
+  }
+
+  .article-box__paragraf {
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #212121;
+    padding: 0;
+    margin: 0;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .article__container {
+    max-width: 768px;
+    margin: 0 auto;
+    padding: 30px 15px;
+    margin-top: 40px;
+    background-color: rgb(119, 0, 255);
+  }
+
+  .article__description {
+    /* margin: 10 15px 15px; */
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 24px;
+    /* or 171% */
+    letter-spacing: 0.03em;
+    margin: 0px;
+    padding: 0px;
+
+    color: #757575;
+    text-align: justify;
+  }
+
+  .article__article-box {
+    max-width: 354px;
+    display: inline-block;
+  }
+
+  .article__icon-box {
+    width: 354px;
+    height: 120px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-right: 0px;
+    margin: 0px;
+    padding: 0;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    margin-bottom: 30px;
+    background-color: #f5f4fa;
+  }
+
+  .article-box__paragraf {
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #212121;
+    padding: 0;
+    margin: 0;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .article {
+    color: #ffffff;
+
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+  .article__container {
+    max-width: 1200px;
+    margin: 0 auto;
+  }
+
+  .article__description {
+    /* margin: 10 15px 15px; */
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 24px;
+    /* or 171% */
+    letter-spacing: 0.03em;
+    margin: 0px;
+    padding: 0px;
+
+    color: #757575;
+    text-align: justify;
+  }
+
+  .article__article-box {
+    max-width: 270px;
+    display: inline-block;
+
+    padding-right: 0px;
+    margin: 0px;
+    padding: 0;
+  }
+
+  .article__icon-box {
+    width: 270px;
+    height: 120px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-right: 0px;
+    margin: 0px;
+    padding: 0;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    margin-bottom: 30px;
+    background-color: #f5f4fa;
+  }
+
+  .article-box__paragraf {
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #212121;
+    padding: 0;
+    margin: 0;
+  }
+}
