--- a/sass/components/_pagesectionportfolio.scss
+++ b/sass/components/_pagesectionportfolio.scss
@@ -109,3 +109,12 @@
     transition: cubic-bezier(0.4, 0, 0.2, 1);
   }
 }
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+}
+
+@media screen and (min-width: 1200px) {
+}
