--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -1,4 +1,4 @@
-.menu-container {
+.js-menu-container {
   width: 100%;
   position: fixed;
   height: 100%;
@@ -9,23 +9,24 @@
   z-index: 1;
   top: 0;
   left: 0;
+  
 }
 
 .is-open {
   transform: translateX(0) rotate(0) scale(1);
 }
 
-.close-menu,
-.open-menu {
+.js-close-menu,
+.js-open-menu {
   cursor: pointer;
 }
 
-.open-menu {
+.js-open-menu{
   position: relative;
   top: 5px;
 }
 
-.close-menu {
+.js-close-menu{
   position: absolute;
   top: 15px;
   right: 24px;
@@ -35,86 +36,86 @@
   font-size: 30px;
 }
 
-.close-menu:hover {
+.js-close-menu:hover{
   color: var(--hover-color);
 }
 
-.menu {
-  &__icon {
-    fill: var(--text-color-black);
+.js-menu{
+    &__icon{
+      fill: var(--text-color-black);
 
-    &:hover {
-      fill: var(--hover-color);
-    }
-  }
-
-  &__box-flex {
-    display: flex;
-    flex-direction: column;
-  }
-
-  &__link {
-    font-weight: 500;
-    font-size: 40px;
-    line-height: 47px;
-    letter-spacing: 0.02em;
-    text-decoration: none;
-    color: var(--text-color-black);
-
-    &:hover {
-      color: var(--hover-color);
+      &:hover{
+        fill: var(--hover-color);
+      }
     }
 
-    &--current {
-      color: var(--hover-color);
+    &__box-flex{
+      display: flex;
+      flex-direction: column;
     }
 
-    &--top {
-      margin-top: 48px;
-    }
-
-    &--bottom {
-      margin-bottom: 36px;
-    }
-
-    &-second {
+    &__link{
       font-weight: 500;
-      font-size: 34px;
-      line-height: 40px;
+      font-size: 40px;
+      line-height: 47px;
       letter-spacing: 0.02em;
       text-decoration: none;
-      color: var(--text-colo-main);
+      color: var(--text-color-black);
 
-      &:hover {
+      &:hover{
         color: var(--hover-color);
       }
 
-      &--top {
-        margin-top: 302px;
-        margin-bottom: 32px;
-      }
-
-      &--backlight {
+      &--current{
         color: var(--hover-color);
       }
-    }
-  }
 
-  &__socials {
-    display: flex;
-    justify-content: space-around;
-    margin-top: 64px;
+      &--top{
+        margin-top: 48px;
+      }
 
-    &--social-media {
-      font-weight: 500;
-      font-size: 18px;
-      line-height: 22px;
-      letter-spacing: 0.02em;
-      color: var(--hover-color);
+      &--bottom{
+        margin-bottom: 36px;
+      }
+
+      &-second{
+        font-weight: 500;
+        font-size: 34px;
+        line-height: 40px;
+        letter-spacing: 0.02em;
+        text-decoration: none;
+        color: var(--text-colo-main);
+
+        &:hover{
+          color: var(--hover-color);
+        }
+
+        &--top{
+          margin-top: 302px;
+          margin-bottom: 32px;
+        }
+
+        &--backlight{
+          color: var(--hover-color);
+        }
+      }
     }
 
-    &--line {
-      color: var(--shadow-fourteenth);
+    &__socials{
+      display: flex;
+      justify-content: space-around;
+      margin-top: 64px;
+
+      &--social-media{
+        font-weight: 500;
+        font-size: 18px;
+        line-height: 22px;
+        letter-spacing: 0.02em;
+        color: var(--hover-color);
+      }
+
+      &--line{
+        color: var(--shadow-fourteenth);
+      }
     }
-  }
 }
