--- a/sass/components/_pagefooter.scss
+++ b/sass/components/_pagefooter.scss
@@ -204,6 +204,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    align-items: center;
     width: 480px;
   }
 
@@ -213,7 +214,8 @@
     justify-content: center;
     align-items: center;
     padding-top: 60px;
-    padding-bottom: 60px;
+
+    width: 480px;
   }
 
   .footer__logo {
@@ -230,6 +232,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
+
+    margin: 0;
   }
 
   .footer__icon-box {
@@ -266,11 +270,13 @@
 
   .footer__form-newsletter {
     display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start;
+    width: 480px;
+    align-items: center;
+    justify-content: center;
     padding-top: 60px;
-    padding-left: 67px;
+    margin: 0px;
+
+    padding-right: 66px;
   }
   .form-newsletter__paragraf {
     text-transform: uppercase;
@@ -289,14 +295,18 @@
   }
   .form-newsletter__box {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+
+    flex-wrap: wrap;
+    margin: 0px;
+    padding-top: 30px;
+    padding-bottom: 30px;
   }
 
   .form-newsletter__button-icon {
     fill: #ffffff;
     width: 24px;
     height: 24px;
-    margin-left: 24px;
   }
   .form-newsletter__link {
     font-family: var(--main-font);
@@ -309,11 +319,11 @@
   .form-newsletter__input {
     background-color: transparent;
     height: 50px;
-    min-width: 358px;
+    min-width: 480px;
     border-radius: 6px;
     margin: 0;
     border-color: #757575;
-    padding-left: 16px;
+
     border-style: solid;
     color: #ffffff;
 
@@ -326,7 +336,6 @@
   }
 
   .button--newsletter {
-    margin-left: 12px;
     letter-spacing: 0.03em;
     cursor: pointer;
     color: #ffffff;
@@ -337,7 +346,7 @@
     justify-content: center;
     align-items: center;
     text-decoration: none;
-
+    margin-top: 30px;
     height: 50px;
     width: 200px;
 
@@ -354,8 +363,8 @@
     }
   }
 
-  .link__page {
-    color: #212121;
+  .link-footer__page {
+    color: #757575;
     text-decoration: none;
     font-style: normal;
     font-weight: 500;
