--- a/sass/components/_pagesectionteam.scss
+++ b/sass/components/_pagesectionteam.scss
@@ -1,95 +1,4 @@
-.team {
-  color: #ffffff;
-  display: flex;
-  justify-content: center;
-  background-color: #f5f4fa;
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
-
-.team__box {
-  margin-bottom: 35px;
-  position: relative;
-  overflow: hidden;
-}
-
-.team__figure {
-  margin: 0 auto;
-  padding-bottom: 15px;
-  background-color: #ffffff;
-  box-shadow: var(--box-shadow);
-  border-radius: var(--border-radius);
-}
-
-.team__description {
-  font-family: var(--main-font);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  color: #757575;
-  background-color: #ffffff;
-  max-width: 270px;
-  padding-top: 30px;
-  padding-bottom: 30px;
-  line-height: 30px;
-  margin: 0%;
-  gap: 0%;
-}
-
-.section__paragraf {
-  width: 1200px;
-  font-family: var(--main-font);
-  font-style: normal;
-  font-weight: 900;
-  font-size: 44px;
-  line-height: 60px;
-  text-transform: uppercase;
-  letter-spacing: 0.03em;
-  color: #212121;
-  text-decoration: solid;
-  text-align: center;
-  display: inline-block;
-  margin: 0;
-  padding-bottom: 50px;
-}
-
-.socials__icon {
-  margin-left: 5px;
-  margin-right: 5px;
-  fill: #757575;
-  background-color: #ffffff;
-  border-radius: 50%;
-}
-
-.socials__icon--team {
-  margin-left: 5px;
-  margin-right: 5px;
-  fill: #757575;
-  background-color: #ffffff;
-  border-radius: 50%;
-
-  &:hover {
-    fill: #ffffff;
-    background-color: #2196f3;
-    cursor: pointer;
-    transition: 250ms;
-  }
-}
-
-.team__icons-box {
-  width: 270px;
-  height: 60px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding-right: 0px;
-  margin: 0px;
-  padding: 0;
-  background-color: #ffffff;
-}
-
-@media screen and (min-width: 320px) and (max-width: 767px){
-
+@media screen and (min-width: 320px) and (max-width: 767px) {
   .team {
     color: #ffffff;
     display: flex;
@@ -99,8 +8,7 @@
     padding-bottom: 94px;
   }
   .team__container {
- width: 450px;
- 
+    width: 450px;
   }
   .team__box {
     width: 450px;
@@ -108,34 +16,42 @@
     display: flex;
     justify-content: center;
   }
-  
+
   .team__figure {
-    width: 450px;
     margin: 0 auto;
     padding-bottom: 15px;
     background-color: #ffffff;
     box-shadow: var(--box-shadow);
     border-radius: var(--border-radius);
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
   }
-  
+
   .team__description {
-    
     font-family: var(--main-font);
+    color: #212121;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 19px;
+    width: 450px;
+    height: 60px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    color: #757575;
-    background-color: #cc4141;
-    line-height: 30px;
+    justify-content: center;
+    gap: 0;
+    padding-top: 60px;
+    padding-bottom: 40px;
   }
-  
+
   .section__paragraf {
     width: 480px;
     font-family: var(--main-font);
     font-style: normal;
     font-weight: 900;
     font-size: 44px;
-    
+
     text-transform: uppercase;
     letter-spacing: 0.03em;
     color: #212121;
@@ -143,9 +59,8 @@
     text-align: center;
     display: inline-block;
     margin: 0;
-    background-color: #2196f3;
   }
-  
+
   .socials__icon {
     margin-left: 5px;
     margin-right: 5px;
@@ -153,14 +68,14 @@
     background-color: #ffffff;
     border-radius: 50%;
   }
-  
+
   .socials__icon--team {
     margin-left: 5px;
     margin-right: 5px;
     fill: #757575;
     background-color: #ffffff;
     border-radius: 50%;
-  
+
     &:hover {
       fill: #ffffff;
       background-color: #2196f3;
@@ -168,7 +83,7 @@
       transition: 250ms;
     }
   }
-  
+
   .team__icons-box {
     width: 450px;
     height: 60px;
@@ -182,10 +97,202 @@
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1199px){
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .team {
+    color: #ffffff;
+    display: flex;
+    justify-content: center;
+    background-color: #f5f4fa;
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+  .team__container {
+    width: 768px;
+  }
+  .team__box {
+    width: 354px;
+    margin-bottom: 35px;
+    display: flex;
+    justify-content: center;
+  }
 
+  .team__figure {
+    margin: 0 auto;
+    padding-bottom: 15px;
+    background-color: #ffffff;
+    box-shadow: var(--box-shadow);
+    border-radius: var(--border-radius);
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .team__description {
+    font-family: var(--main-font);
+    color: #212121;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 19px;
+    width: 354px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    gap: 0;
+    padding-top: 60px;
+    padding-bottom: 40px;
+  }
+
+  .section__paragraf {
+    width: 480px;
+    font-family: var(--main-font);
+    font-style: normal;
+    font-weight: 900;
+    font-size: 44px;
+
+    text-transform: uppercase;
+    letter-spacing: 0.03em;
+    color: #212121;
+    text-decoration: solid;
+    text-align: center;
+    display: inline-block;
+    margin: 0;
+  }
+
+  .socials__icon {
+    margin-left: 5px;
+    margin-right: 5px;
+    fill: #757575;
+    background-color: #ffffff;
+    border-radius: 50%;
+  }
+
+  .socials__icon--team {
+    margin-left: 5px;
+    margin-right: 5px;
+    fill: #757575;
+    background-color: #ffffff;
+    border-radius: 50%;
+
+    &:hover {
+      fill: #ffffff;
+      background-color: #2196f3;
+      cursor: pointer;
+      transition: 250ms;
+    }
+  }
+
+  .team__icons-box {
+    width: 354px;
+    height: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-right: 0px;
+    margin: 0px;
+    padding: 0;
+    background-color: #ffffff;
+  }
+
+  .img {
+    width: 354px;
+    height: 374px;
+  }
 }
 
-@media screen and (min-width: 1200px){
+@media screen and (min-width: 1200px) {
+  .team {
+    color: #ffffff;
+    display: flex;
+    justify-content: center;
+    background-color: #f5f4fa;
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 
+  .team__box {
+    margin-bottom: 35px;
+    position: relative;
+    overflow: hidden;
+  }
+
+  .team__figure {
+    margin: 0 auto;
+    padding-bottom: 15px;
+    background-color: #ffffff;
+    box-shadow: var(--box-shadow);
+    border-radius: var(--border-radius);
+  }
+
+  .team__description {
+    font-family: var(--main-font);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: #757575;
+    background-color: #ffffff;
+    max-width: 270px;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    line-height: 30px;
+    margin: 0%;
+    gap: 0%;
+  }
+
+  .section__paragraf {
+    width: 1200px;
+    font-family: var(--main-font);
+    font-style: normal;
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 60px;
+    text-transform: uppercase;
+    letter-spacing: 0.03em;
+    color: #212121;
+    text-decoration: solid;
+    text-align: center;
+    display: inline-block;
+    margin: 0;
+    padding-bottom: 50px;
+  }
+
+  .socials__icon {
+    margin-left: 5px;
+    margin-right: 5px;
+    fill: #757575;
+    background-color: #ffffff;
+    border-radius: 50%;
+  }
+
+  .socials__icon--team {
+    margin-left: 5px;
+    margin-right: 5px;
+    fill: #757575;
+    background-color: #ffffff;
+    border-radius: 50%;
+
+    &:hover {
+      fill: #ffffff;
+      background-color: #2196f3;
+      cursor: pointer;
+      transition: 250ms;
+    }
+  }
+
+  .team__icons-box {
+    width: 270px;
+    height: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-right: 0px;
+    margin: 0px;
+    padding: 0;
+    background-color: #ffffff;
+  }
+  .img {
+    width: 270px;
+    height: 260px;
+  }
 }
