--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,3 +8,4 @@
 @import "components/pagesectionteam";
 @import "components/pagesectionwhatwedo";
 @import "components/modal";
+@import "components/menu";
