--- a/sass/components/_pagemain.scss
+++ b/sass/components/_pagemain.scss
@@ -1,65 +1,67 @@
-.order {
-  background-color: #2f303a;
-  color: #ffffff;
-  min-height: 252px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-top: 1px solid #ececec;
-
-  .order__container {
-    width: 1600px;
-    height: 600px;
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .order {
+    background-color: #2f303a;
     color: #ffffff;
+
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding-top: 94px;
-    padding-bottom: 94px;
-    margin: 0;
-    padding-right: 0;
-    padding-left: 0;
+    border-top: 1px solid #ececec;
+  }
+  .order__container {
+    width: 480px;
+    height: 400px;
+    color: #ffffff;
     background-image: linear-gradient(
         to top,
         rgba(0, 18, 105, 0) 0%,
         rgba(47, 48, 58, 0.4) 100%
       ),
-      url("../images/team_meeting.jpg");
+      url("../images/tm-mobile.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .order__header {
+    display: flex;
+    justify-content: center;
+    width: 480px;
+    height: 84px;
+    text-align: center;
+  }
+  .button {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 162%;
+    /* identical to box height, or 162% */
+    text-align: center;
+    letter-spacing: 0.03em;
+    cursor: pointer;
+    color: #ffffff;
+    border-radius: 4px;
+
+    border: none;
+    background-color: var(--button-color);
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    &:focus,
+    &:hover {
+      -webkit-box-shadow: 0px 10px 13px -7px #000000, 0px 0px 19px 0px #000000;
+      box-shadow: 0px 10px 13px -7px #000000, 0px 0px 19px 0px #000000;
+      border-radius: 4px 4px 4px 4px;
+      transition: cubic-bezier(0.4, 0, 0.2, 1);
+    }
   }
 }
 
-.button {
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 162%;
-  /* identical to box height, or 162% */
-  text-align: center;
-  letter-spacing: 0.03em;
-  cursor: pointer;
-  color: #ffffff;
-  border-radius: 4px;
-
-  border: none;
-  background-color: var(--button-color);
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  &:focus,
-  &:hover {
-    -webkit-box-shadow: 0px 10px 13px -7px #000000, 0px 0px 19px 0px #000000;
-    box-shadow: 0px 10px 13px -7px #000000, 0px 0px 19px 0px #000000;
-    border-radius: 4px 4px 4px 4px;
-    transition: cubic-bezier(0.4, 0, 0.2, 1);
-  }
-}
-
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .order {
     background-color: #2f303a;
     color: #ffffff;
@@ -70,7 +72,7 @@
     border-top: 1px solid #ececec;
 
     .order__container {
-      width: 480px;
+      width: 768px;
       height: 400px;
       color: #ffffff;
       background-image: linear-gradient(
@@ -78,10 +80,14 @@
           rgba(0, 18, 105, 0) 0%,
           rgba(47, 48, 58, 0.4) 100%
         ),
-        url("../images/team_meeting.jpg");
+        url("../images/tm-tablet2.jpg");
       background-size: cover;
       background-repeat: no-repeat;
       background-position: center;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
     }
   }
 
@@ -120,8 +126,65 @@
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1199px) {
-}
-
 @media screen and (min-width: 1200px) {
+  .order {
+    background-color: #2f303a;
+    color: #ffffff;
+    min-height: 252px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-top: 1px solid #ececec;
+
+    .order__container {
+      width: 1600px;
+      height: 600px;
+      color: #ffffff;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      padding-top: 94px;
+      padding-bottom: 94px;
+      margin: 0;
+      padding-right: 0;
+      padding-left: 0;
+      background-image: linear-gradient(
+          to top,
+          rgba(0, 18, 105, 0) 0%,
+          rgba(47, 48, 58, 0.4) 100%
+        ),
+        url("../images/tm-tablet2.jpg");
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-position: center;
+    }
+  }
+
+  .button {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 162%;
+    /* identical to box height, or 162% */
+    text-align: center;
+    letter-spacing: 0.03em;
+    cursor: pointer;
+    color: #ffffff;
+    border-radius: 4px;
+
+    border: none;
+    background-color: var(--button-color);
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    &:focus,
+    &:hover {
+      -webkit-box-shadow: 0px 10px 13px -7px #000000, 0px 0px 19px 0px #000000;
+      box-shadow: 0px 10px 13px -7px #000000, 0px 0px 19px 0px #000000;
+      border-radius: 4px 4px 4px 4px;
+      transition: cubic-bezier(0.4, 0, 0.2, 1);
+    }
+  }
 }
