--- a/sass/components/_pagesectionclients.scss
+++ b/sass/components/_pagesectionclients.scss
@@ -1,50 +1,3 @@
-.clients {
-  color: #ffffff;
-  display: flex;
-  justify-content: center;
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
-
-.clients__box {
-  max-width: 150px;
-  max-height: 92px;
-  display: flex;
-  padding-right: 0px;
-  padding: 0;
-  margin: 0%;
-  border-radius: 10%;
-}
-.clients__icon {
-  fill: #afb1b8;
-  background-color: #ffffff;
-  border-radius: 5%;
-  border: 2px solid #afb1b8;
-  &:hover {
-    fill: #2196f3;
-    border-color: #2196f3;
-    cursor: pointer;
-    transition: cubic-bezier(0.4, 0, 0.2, 1);
-  }
-}
-
-.section__paragraf {
-  width: 1200px;
-  font-family: var(--main-font);
-  font-style: normal;
-  font-weight: 900;
-  font-size: 44px;
-  line-height: 60px;
-  text-transform: uppercase;
-  letter-spacing: 0.03em;
-  color: #212121;
-  text-decoration: solid;
-  text-align: center;
-  display: inline-block;
-  margin: 0;
-  padding-bottom: 50px;
-}
-
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .clients {
     color: #ffffff;
@@ -52,7 +5,6 @@
     justify-content: center;
     padding-top: 94px;
     padding-bottom: 94px;
- 
   }
   .clients__container {
     color: #ffffff;
@@ -62,11 +14,10 @@
 
   .clients__wrapper {
     width: 480px;
- 
+
     display: flex;
     flex-wrap: wrap;
-   justify-content: center;
-
+    justify-content: center;
   }
   .clients__box {
     max-width: 150px;
@@ -93,62 +44,58 @@
     }
   }
 
-  .section__paragraf {
-    width: 450px;
+  .clients__paragraf {
+    width: 480px;
     font-family: var(--main-font);
     font-style: normal;
     font-weight: 900;
-    font-size: 44px;
+    font-size: 28px;
     line-height: 60px;
     text-transform: uppercase;
     letter-spacing: 0.03em;
     color: #212121;
     text-decoration: solid;
     text-align: center;
-    display: inline-block;
+
     margin: 0;
     padding-bottom: 50px;
   }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
-
   .clients {
     color: #ffffff;
     display: flex;
     justify-content: center;
     padding-top: 94px;
     padding-bottom: 94px;
- 
   }
   .clients__container {
     color: #ffffff;
-
-    width: 480px;
   }
 
   .clients__wrapper {
-    width: 480px;
- 
+    width: 768px;
+
     display: flex;
     flex-wrap: wrap;
-   justify-content: center;
-
+    justify-content: center;
+    align-items: center;
   }
   .clients__box {
-    max-width: 150px;
-    max-height: 92px;
+    width: 228px;
+
     display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
     padding-right: 0px;
     padding: 0;
     margin: 0%;
     border-radius: 10%;
-    margin: 15px;
+    margin-top: 55px;
   }
   .clients__icon {
     fill: #afb1b8;
-    width: 210px;
-    height: 92px;
     background-color: #ffffff;
     border-radius: 5%;
     border: 2px solid #afb1b8;
@@ -160,8 +107,63 @@
     }
   }
 
-  .section__paragraf {
-    width: 450px;
+  .clients__paragraf {
+    width: 768px;
+    font-family: var(--main-font);
+    font-style: normal;
+    font-weight: 900;
+    font-size: 28px;
+    line-height: 60px;
+    text-transform: uppercase;
+    letter-spacing: 0.03em;
+    color: #212121;
+    text-decoration: solid;
+    text-align: center;
+
+    margin: 0;
+    padding-bottom: 50px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .clients {
+    color: #ffffff;
+    display: flex;
+    justify-content: center;
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+  .clients__wrapper {
+    width: 1200px;
+
+    display: flex;
+
+    justify-content: space-between;
+  }
+  .clients__box {
+    max-width: 150px;
+    max-height: 92px;
+    display: flex;
+    padding-right: 0px;
+    padding: 0;
+    margin: 0%;
+    border-radius: 10%;
+  }
+  .clients__icon {
+    fill: #afb1b8;
+    background-color: #ffffff;
+    border-radius: 5%;
+    border: 2px solid #afb1b8;
+    &:hover {
+      fill: #2196f3;
+      border-color: #2196f3;
+      cursor: pointer;
+      transition: cubic-bezier(0.4, 0, 0.2, 1);
+    }
+  }
+
+  .clients__paragraf {
+    width: 1200px;
     font-family: var(--main-font);
     font-style: normal;
     font-weight: 900;
@@ -176,7 +178,4 @@
     margin: 0;
     padding-bottom: 50px;
   }
-}
-
-@media screen and (min-width: 1200px) {
 }
